# mitama-cpp-result

./: .clang-format  .gitignore  .gitmodules  404.html  CHANGELOG  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile.toml  README.md  cabin.toml  cppmap_styles.css  index.html  mathjaxhelper.js  poac.toml  search_index.json  sitemap.xml  versions.json
.circleci/: config.yml
.github/: CONTRIBUTING.md  FUNDING.tml  dependabot.yml
.github/workflows/: auto-release.yml  catch-and-flow-linux.yml  catch-and-flow.yml  cpp.yml  deploy-docs.yml  docs.yml  document-test.yml  full-test.yml
Result101/: index.html
Result101/Err/: constructors.html  deduction_guides.html  index.html
Result101/Ok/: constructors.html  deduction_guides.html  index.html
Result101/Result/: constructors.html  index.html
Result101/intro/: index.html
Result101/special_members/: index.html
anyhow/anyhow/: index.html
api/: and.html  and_then.html  equality.html  err.html  index.html  is_err.html  is_ok.html  map.html  map_err.html  map_or_else.html  ok.html  or.html  or_else.html  transpose.html  unwrap.html  unwrap_err.html  unwrap_or.html  unwrap_or_default.html  unwrap_or_else.html
api/and/: index.html
api/and_then/: index.html
api/equality/: index.html
api/err/: index.html
api/is_err/: index.html
api/is_ok/: index.html
api/map/: index.html
api/map_err/: index.html
api/map_or_else/: index.html
api/ok/: index.html
api/or/: index.html
api/or_else/: index.html
api/transpose/: index.html
api/unwrap/: index.html
api/unwrap_err/: index.html
api/unwrap_or/: index.html
api/unwrap_or_default/: index.html
api/unwrap_or_else/: index.html
docs/: Result_8hpp.html  Result_8hpp.html.bak  Result_8hpp.js  Result_8hpp_source.html  annotated.html  annotated.html.bak  classes.html  classes.html.bak  classmitama_1_1Err-members.html  classmitama_1_1Err-members.html.bak  classmitama_1_1Err.html  classmitama_1_1Ok-members.html  classmitama_1_1Ok-members.html.bak  classmitama_1_1Ok.html  classmitama_1_1Ok.html.bak  classmitama_1_1Result-members.html  classmitama_1_1Result.html  classmitama_1_1in__place__err__t.html  classmitama_1_1in__place__ok__t.html  config.toml  doxygen.css  files.html  files.js  functions.html  functions_func.html  functions_rela.html  functions_rela.html.bak  functions_type.html  functions_type.html.bak  group__Modules.html  group__Modules.html.bak  group__Modules.js  hierarchy.html  index.html  menudata.js  mkdocs.yml  modules.html  modules.html.bak  modules.js  navtree.css  (+9 more)
docs/docs/: README.md
docs/docs/anyhow/: anyhow.md
docs/docs/maybe/: APIs.md  comparisons.md  intro.md  metafunctions.md  special_members.md
docs/docs/maybe/_APIs/: and_peek.md  cloned.md  conj.md  disj.md  filter.md  flatten.md  get_or_emplace.md  get_or_emplace_with.md  ok_or_else.md  or_else.md  or_finally.md  or_peek.md  range_to_maybe.md  replace.md  replace_with.md  transpose.md  unwrap_or_default.md
docs/docs/maybe/_Internal/: comparisons.todo
docs/docs/maybe/_metafunctions/: is_just.md  is_maybe.md
docs/docs/release_notes/: v1_0_0.md  v1_0_1.md  v1_1_0.md  v1_1_1.md  v1_1_2.md  v1_2_0.md  v2_0_1.md  v2_1_0.md  v2_1_1.md  v3_0_0.md  v4_0_0.md  v4_0_1.md  v4_0_2.md  v4_1_0.md  v5_0_0.md  v5_0_1.md  v5_0_2.md  v5_0_3.md  v6_0_0.md  v6_1_0.md  v6_2_0.md  v6_3_0.md  v6_4_0.md  v6_4_1.md  v7_0_0.md  v7_0_1.md  v7_1_0.md  v7_2_0.md  v7_3_0.md  v7_3_1.md  v7_3_2.md  v7_4_0.md  v7_5_0.md  v7_5_1.md  v7_6_0.md  v7_7_0.md  v7_8_0.md  v8_0_0.md  v8_1_0.md  v8_1_1.md  (+12 more)
docs/docs/result/: APIs.md  CHANGELOG.md  comparisons.md  intro.md  metafunctions.md  special_members.md
docs/docs/result/_APIs/: and_finally.md  and_peek.md  and_then.md  conj.md  disj.md  err.md  is_err.md  is_ok.md  map.md  map_anything_else.md  map_err.md  map_or_else.md  ok.md  or_else.md  or_finally.md  or_peek.md  transpose.md  unwrap.md  unwrap_err.md  unwrap_or.md  unwrap_or_default.md  unwrap_or_else.md
docs/docs/result/_metafunctions/: is_result.md  is_result_with.md
docs/docs/thiserror/: thiserror.md
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  groups_0.js  related_0.js  search.css  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
include/: Result.hpp
include/match/: boost_lambda_ext.hpp  match.hpp
include/mitama/: boolinators.hpp  panic.hpp
include/result/: Result.hpp  detail.hpp  fwd.hpp  result.hpp  result_impl.hpp
include/traits/: impl_traits.hpp  perfect_traits_special_members.hpp
latest/: sitemap.xml
maybe/APIs/: index.html
maybe/comparisons/: index.html
maybe/intro/: index.html
maybe/metafunctions/: index.html
maybe/special_members/: index.html
meta/: index.html  is_result.html  is_result_with.html
meta/is_result/: index.html
meta/is_result_with/: index.html
release_notes/v1_0_0/: index.html
release_notes/v1_0_1/: index.html
release_notes/v1_1_0/: index.html
release_notes/v1_1_1/: index.html
release_notes/v1_1_2/: index.html
release_notes/v1_2_0/: index.html
release_notes/v2_0_1/: index.html
release_notes/v2_1_0/: index.html
release_notes/v2_1_1/: index.html
release_notes/v3_0_0/: index.html
release_notes/v4_0_0/: index.html
release_notes/v4_0_1/: index.html
release_notes/v4_0_2/: index.html
release_notes/v4_1_0/: index.html
release_notes/v5_0_0/: index.html
release_notes/v5_0_1/: index.html
release_notes/v5_0_2/: index.html
release_notes/v5_0_3/: index.html
release_notes/v6_0_0/: index.html
release_notes/v6_1_0/: index.html
release_notes/v6_2_0/: index.html
release_notes/v6_3_0/: index.html
release_notes/v6_4_0/: index.html
release_notes/v6_4_1/: index.html
search/: search_index.json
test/: CMakeLists.txt  Match_Test.cpp  Maybe_Test.cpp  Result_Test.cpp  TestClass.hpp  actual.hpp  anyhow_tests.cpp  match.cpp  maybe_tests.cpp  result_tests.cpp  special_member_tests.hpp  test_util.hpp
(+241 files in other folders)
