[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["mitama <loligothick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
markdown-include = "^0.6.0"
python-markdown-math = "^0.8"
fontawesome-markdown = "^0.2.6"
Pygments = "^2.12.0"
mkdocs-material = "^8.2.16"
mkdocs-awesome-pages-plugin = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
